--- a/Extension/popup.html
+++ b/Extension/popup.html
@@ -79,7 +79,7 @@
     <h1>If you love this extension, please join my Discord channel or give this GitHub repo a star xD!</h1>
     <div class="cta-buttons">
       <a href="https://discord.com" target="_blank">Join Discord</a>
-      <a href="https://github.com" target="_blank">Give a Star on GitHub</a>
+      <a href="https://github.com/Whitzzscott/Whitz-Chat-Importer" target="_blank">Give a Star on GitHub</a>
     </div>
   </div>
 </body>
