--- a/Extension/popup.html
+++ b/Extension/popup.html
@@ -78,7 +78,7 @@
   <div class="content">
     <h1>If you love this extension, please join my Discord channel or give this GitHub repo a star xD!</h1>
     <div class="cta-buttons">
-      <a href="https://discord.com" target="_blank">Join Discord</a>
+      <a href="https://discord.gg/mFG7qQQTUp" target="_blank">Join Discord</a>
       <a href="https://github.com/Whitzzscott/Whitz-Chat-Importer" target="_blank">Give a Star on GitHub</a>
     </div>
   </div>
